# RRL-2026-Robot

./: .gitignore  CompileRun.txt  Configurations.json  Constants.txt  LICENSE  README.md  VESCRPMDutyCycle.py
src/camera_pkg/: CMakeLists.txt  package.xml
src/camera_pkg/config/: settings.json
src/camera_pkg/include/camera_pkg/: camera_grid.h  camera_manager.h  camera_stream.h  console_sink.h  console_window.h  main_window.h  settings_manager.h  stats_panel.h  thermal_stream.h  types.h  ui_helpers.h
src/camera_pkg/launch/: camera_pkg.launch.py
src/camera_pkg/src/: camera_grid.cpp  camera_manager.cpp  camera_stream.cpp  console_sink.cpp  console_window.cpp  main.cpp  main_window.cpp  settings_manager.cpp  stats_panel.cpp  thermal_stream.cpp  ui_helpers.cpp
src/control_pkg/: package.xml
src/robot_pkg/: CMakeLists.txt  README.md  package.xml
src/robot_pkg/include/robot_pkg/: VESC.hpp  arm.hpp  body.hpp  config.json
src/robot_pkg/src/: JoyStickListener.cpp  VESC.cpp  arm.cpp  body.cpp
src/robot_pkg/src/pytest/: test.py
src/telemetry_pkg/: CMakeLists.txt  package.xml
src/telemetry_pkg/include/telemetry_pkg/: config.json
src/telemetry_pkg/src/: TelemetryPublisher.cpp
src/thermal_pkg/: CMakeLists.txt  package.xml
src/thermal_pkg/include/thermal_pkg/: thermal_camera_node.hpp  thermal_display_node.hpp
src/thermal_pkg/launch/: thermal_camera.launch.py
src/thermal_pkg/src/: thermal_camera_node.cpp  thermal_display_node.cpp
