<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>thermal_pkg</name>
  <version>1.0.0</version>
  <description>ROS2 C++ package for reading and displaying MLX90640 thermal camera data</description>
  <maintainer email="robotica@robocup.org">robotica</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <build_depend>libopencv-dev</build_depend>
  <exec_depend>libopencv-dev</exec_depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
